--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,14 +8,13 @@ server.port=8081
 spring.mvc.view.prefix=/WEB-INF/views/
 spring.mvc.view.suffix=.jsp
 
-# Recursos estáticos:
-# - Si usas /src/main/webapp/** (CSS, imágenes), NO declares static-locations.
-# - Alternativa: mover a /src/main/resources/static/** y acceder con /css/... /img/...
-# (No poner spring.web.resources.static-locations)
+# Recursos estáticos (usa /src/main/webapp o /src/main/resources/static)
+# No declares spring.web.resources.static-locations si usas webapp
 
 # =======================================================
 # 2) BASE DE DATOS H2 + JPA/HIBERNATE
 # =======================================================
+# Opción A: dejar caso por defecto de H2 (nombres en MAYÚSCULAS)
 spring.datasource.url=jdbc:h2:mem:bodegadb;MODE=MySQL;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
@@ -25,11 +24,11 @@ spring.datasource.password=
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
 
-# Usaremos LOS SCRIPTS (schema.sql y data.sql), por eso:
+# JPA / Hibernate
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
-# (Opcional) spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+# spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
 # =======================================================
 # 3) SCRIPTS DE INICIALIZACIÓN
@@ -38,12 +37,21 @@ spring.sql.init.mode=always
 spring.sql.init.schema-locations=classpath:schema.sql
 spring.sql.init.data-locations=classpath:data.sql
 
-# Pool (Hikari por defecto OK)
+# Pool (Hikari por defecto)
 spring.datasource.type=com.zaxxer.hikari.HikariDataSource
 
-# Colores en logs
-spring.output.ansi.enabled=ALWAYS
-
+# =======================================================
+# 4) CODIFICACIÓN (UTF-8)
+# =======================================================
 server.servlet.encoding.charset=UTF-8
 server.servlet.encoding.enabled=true
 server.servlet.encoding.force=true
+
+spring.web.encoding.charset=UTF-8
+spring.web.encoding.enabled=true
+spring.web.encoding.force=true
+
+# =======================================================
+# 5) LOGS
+# =======================================================
+spring.output.ansi.enabled=ALWAYS
